fixed footer spacing (pt. 1?)

--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,7 @@ main p
     color: white;
     padding: 20px;
     text-align: center;
+    margin-top: 50px;
 }
 
 /* Footer Links */
